fixed responsive side navigation and open-close effects for modals

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,1 @@
-<div class="container">
-  <app-header></app-header>
-  <main>
-
-    <mat-sidenav-container>
-      <mat-sidenav color="primary" #sidenav mode="over" opened="false" fxHide.gt-sm="true">
-        <div>
-          <a mat-button routerLink="/customers">Customers</a>
-          <a mat-button routerLink="/accounts">Accounts</a>
-        </div>
-      </mat-sidenav>
-
-      <mat-sidenav-content>
-
-        <router-outlet></router-outlet>
-      </mat-sidenav-content>
-    </mat-sidenav-container>
-  </main>
-  <app-footer></app-footer>
-</div>
+<app-side-navigation></app-side-navigation>
